# gobject_rs

./: .gitignore  CMakeLists.txt
cmake/: FindCargo.cmake
rust/: Cargo.toml
rust/src/: imp.rs  lib.rs
rust/src/foo/: imp.rs  mod.rs
rust/src/rstring/: imp.rs  mod.rs
rust/src/shared_rstring/: imp.rs  mod.rs
src/: lib.rs  main.cpp
src/foo/: imp.rs  mod.rs
src/include/: catch.hpp  foo.h  rstring.h
src/src/: TestFoo.cpp  TestRString.cpp
